proc-macros/tests/ui/incorrect/method/method_no_name.stderr
error: unexpected end of input, `#[method]` is missing `name` argument
 --> $DIR/method_no_name.rs:6:2
  |
6 |     #[method()]
  |     ^^^^^^^^^^^
